# ai-xml

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  azure.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: documentation.md
examples/: order-processing.bpel  order-processing.bpmn
infra/: main.bicep  main.bicepparam
pages/: 1_📖_Documentation.py  documentation.py  workflow.py
pptx/: README.md  create-pptx.js  package.json
schemas/: bpel20-simplified.xsd  bpmn20-simplified.xsd
src/: __init__.py  langgraph_pipeline.py  logging_config.py  models.py  pipeline.py  prompts.py  utils.py  validation.py
tests/: __init__.py  test_app.py  test_integration.py  test_models.py  test_pipeline.py  test_validation.py
